--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pyjwt (>=2.11.0,<3.0.0)",
     "redis (>=5.0.8,<6.0.0)",
     "minio (>=7.2.9,<8.0.0)",
-    "bcrypt (>=5.0.0,<6.0.0)"
+    "bcrypt (>=5.0.0,<6.0.0)",
+    "uvicorn (>=0.40.0,<0.41.0)"
 ]
 
 [tool.poetry]
