Обновил docker-compose, импортирую env файл в сервис api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     build:
       context: .
       dockerfile: src/Dockerfile
+    env_file:
+      - .env
     ports:
       - 8000:8000
     restart: always
