--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,9 @@ services:
       - .env
     ports:
       - 8000:8000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /opt/amnezia:/opt/amnezia:rw
     restart: always
     depends_on:
       - postgres
