Убрал hardcoded поля, оавил валидацию для полей default_protocol и available_protocols (пока так, в будущем добавлю горячюю смену протокола), обновил поля в енвшке

--- a/.env.example
+++ b/.env.example
@@ -36,12 +36,28 @@ JWT_ALGORITHM=HS256
 # Server Configuration
 SERVER_PUBLIC_HOST=your-server-ip-or-domain
 
-# Protocols (comma-separated list, e.g., "amneziawg" or leave empty for auto-detection) for future
-AVAILABLE_PROTOCOLS=amneziawg
+# Protocols Configuration
+AVAILABLE_PROTOCOLS=amneziawg # System field
+DEFAULT_PROTOCOL=amneziawg
 
-# AmneziaWG Configuration
+# DNS Configuration
+PRIMARY_DNS=1.1.1.1
+SECONDARY_DNS=1.0.0.1
+
+# WireGuard Configuration
+PERSISTENT_KEEPALIVE_SECONDS=25
+PEER_ONLINE_THRESHOLD_SECONDS=180
+
+# Client Configuration
+CLIENT_DEFAULT_EXPIRATION_DAYS=30
+
+# Network Configuration
+DEFAULT_SUBNET_ADDRESS=10.8.1.0
+
+# AmneziaWG Junk Packet Parameters (JSON format)
+AWG_JUNK_PARAMS={"Jc": "5", "Jmin": "10", "Jmax": "50", "S1": "0", "S2": "0", "S3": "0", "S4": "0", "H1": "", "H2": "", "H3": "", "H4": "", "I1": "", "I2": "", "I3": "", "I4": "", "I5": ""}
+
+# AmneziaWG Container Configuration
 AMNEZIA_CONTAINER_NAME=amnezia-awg2
 AMNEZIA_INTERFACE=awg0
 AMNEZIA_CONFIG_PATH=/opt/amnezia/awg
-
-# Other proto configuration
