--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "bcrypt (>=5.0.0,<6.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
     "asyncpg (>=0.31.0,<0.32.0)",
-    "docker (>=7.1.0,<8.0.0)"
+    "docker (>=7.1.0,<8.0.0)",
+    "ruff (>=0.15.0,<0.16.0)"
 ]
 
 [tool.poetry]
