Решил проблему с public_url для minio, теперь это отдельная переменная, также я поменял логику имени сервера, теперь у клиента будет оторажаться тот server name, который задал админ, а не его юзернейм

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 # MinIO
-MINIO_HOST=localhost:9000
+MINIO_INTERNAL_HOST=minio:9000          # Internal Docker network address for MinIO operations
+MINIO_PUBLIC_HOST=http://your-ip:9000  # Public URL for config file downloads (CHANGE!)
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=amnezia-configs
@@ -35,6 +36,7 @@ JWT_ALGORITHM=HS256
 
 # Server Configuration
 SERVER_PUBLIC_HOST=your-server-ip-or-domain
+SERVER_DISPLAY_NAME=My AmneziaWG Server  # Name shown in Amnezia VPN app
 
 # Protocols Configuration
 AVAILABLE_PROTOCOLS=amneziawg # System field
