--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ PROTOCOL_CONFIG_PATH=src/management/protocols.yaml
 # Peer status configuration (if you're haven't read docs yet, don't touch)
 PERSISTENT_KEEPALIVE_SECONDS=25
 PEER_ONLINE_THRESHOLD_SECONDS=180
+
+# Central API sync configuration
+CLUSTER_ID=your-cluster-uuid
+CENTRAL_API_URL=http://your-central-api-host:8000/api/v1
+CENTRAL_CLUSTER_API_KEY=your-cluster-api-key
+CENTRAL_ADMIN_BEARER_TOKEN=
+SYNC_INTERVAL_SECONDS=60
